bug#2408 - Multiple threads altering MERGE table UNIONs hang/crash. Abandoned improper use of MyISAM data. Thanks Ingo!